Erros
Client.java:22: error: <identifier> expected
	int static quit;
	   ^
Client.java:22: error: <identifier> expected
	int static quit;
	               ^
Client.java:23: error: <identifier> expected
	int static loggedIn;
	   ^
Client.java:23: error: <identifier> expected
	int static loggedIn;
	                   ^
4 errors
